kubernetes/02-argocd/02-argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-httproute
  namespace: argocd
spec:
  parentRefs:
    - kind: Gateway
      name: cilium-internal-gateway  # ou cilium-external-gateway selon le besoin
      namespace: kube-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
